# gstaichi

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  build.py  download_llvm.py  genindex.html  index.html  libdevice_needed.txt  objects.inv  out.txt  py-modindex.html  pyproject.toml  pyrightconfig.json  requirements_dev.txt  requirements_doc.txt  requirements_test.txt  requirements_test_xdist.txt  search.html  searchindex.js  setup.py  stub_replacements.yaml  stub_replacements_funcs.yaml  stub_replacements_global.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  document.md  question.md
.github/workflows/: api_doc.yml  check_markup_links.yml  clang_tidy.yml  linters.yml  linux.yml  linux_x86.yml  linux_x86_ondemand.yml  linux_x86_selfhost_container.yml  linux_x86_selfhost_container_ondemand.yml  mac_ondemand.yml  macosx.yml  manylinux_wheel.yml  publish_pypi.yml  pyright_linter.yml  test_gpu.yml  win.yml  win_ondemand.yml
_modules/: index.html
_modules/gstaichi/: experimental.html
_modules/taichi/: experimental.html
autoapi/: index.html
autoapi/gstaichi/: index.html
autoapi/taichi/: index.html
benchmarks/: run.py  suite_microbenchmarks.py  utils.py
benchmarks/microbenchmarks/: _items.py  _metric.py  _plan.py  _utils.py  atomic_ops.py  fill.py  math_opts.py  matrix_ops.py  memcpy.py  saxpy.py  stencil2d.py
c_api/: .gitignore  gstaichi.json  taichi.json
c_api/cmake/: FindGsTaichi.cmake
c_api/src/: c_api_test_utils.cpp  c_api_test_utils.h  gstaichi_core_impl.cpp  gstaichi_core_impl.h  gstaichi_gfx_impl.cpp  gstaichi_gfx_impl.h  gstaichi_llvm_impl.cpp  gstaichi_llvm_impl.h  gstaichi_metal_impl.h  gstaichi_metal_impl.mm  gstaichi_opengl_impl.cpp  gstaichi_opengl_impl.h  gstaichi_vulkan_impl.cpp  gstaichi_vulkan_impl.h  taichi_core_impl.cpp  taichi_core_impl.h  taichi_metal_impl.h  taichi_metal_impl.mm
c_api/tests/: c_api_aot_test.cpp  c_api_behavior_test.cpp  c_api_cgraph_test.cpp  c_api_interface_test.cpp  c_api_interop_test.cpp  c_api_numerical_test.cpp  comet.cpp  gstaichi_sparse_test.cpp  gtest_fixture.h  mpm88_test.cpp  sph.cpp
c_api/version_scripts/: README.md
ci/scripts/: release_test.sh
cmake/: Distributed.cmake  GsTaichiCAPI.cmake  GsTaichiCAPITests.cmake  GsTaichiCXXFlags.cmake  GsTaichiConfig.cmake.in  GsTaichiCore.cmake  GsTaichiExamples.cmake  GsTaichiTargets.cmake  GsTaichiTests.cmake  PythonNumpyPybind11.cmake  README.md  TaichiCAPI.cmake  TaichiCAPITests.cmake  TaichiCXXFlags.cmake  TaichiCore.cmake  TaichiExamples.cmake  TaichiTests.cmake
conda/: README.md  conda_env.yaml  update_env_vars.sh
conda/scripts/: activate_env_vars.sh
cpp_examples/: aot_save.cpp  autograd.cpp  run_snode.cpp
cpp_examples/rhi_examples/: CMakeLists.txt  common_metal.h  common_metal.mm  common_vulkan.h  sample_3_textured_triangle.cpp
docs/: conftest.py  cover-in-ci.lst
docs/design/: llvm_sparse_runtime.md
docs/rfcs/: 20220413-aot-for-all-snode.md
docs/source/: conf.py
duburcqa-patch-1/_sources/: index.md.txt
duburcqa-patch-1/autoapi/: index.html
gstaichi/analysis/: alias_analysis.cpp  arithmetic_interpretor.cpp  arithmetic_interpretor.h  bls_analyzer.cpp  bls_analyzer.h  build_cfg.cpp  check_fields_registered.cpp  clone.cpp  constexpr_propagation.cpp  count_statements.cpp  data_source_analysis.cpp  detect_fors_with_break.cpp  gather_deactivations.cpp  gather_dynamically_indexed_pointers.cpp  gather_func_store_dests.cpp  gather_immutable_local_vars.cpp  gather_mesh_thread_local.cpp  gather_meshfor_relation_types.cpp  gather_snode_read_writes.cpp  gather_statement_usages.cpp  gather_statements.cpp  gather_uniquely_accessed_pointers.cpp  gather_uniquely_accessed_pointers.h  gather_used_atomics.cpp  gen_offline_cache_key.cpp  has_store_or_atomic.cpp  last_store_or_atomic.cpp  mesh_bls_analyzer.cpp  mesh_bls_analyzer.h  offline_cache_util.cpp  offline_cache_util.h  same_statements.cpp  value_diff.cpp  verify.cpp
gstaichi/aot/: graph_data.cpp  graph_data.h  module_builder.cpp  module_builder.h  module_data.h  module_loader.cpp  module_loader.h
gstaichi/codegen/: codegen.cpp  codegen.h  codegen_utils.h  compiled_kernel_data.cpp  compiled_kernel_data.h  ir_dump.h  kernel_compiler.h
gstaichi/common/: CMakeLists.txt  cleanup.cpp  cleanup.h  core.cpp  core.h  dict.h  dynamic_loader.cpp  dynamic_loader.h  exceptions.h  interface.h  json.cpp  json_serde.h  logging.cpp  logging.h  one_or_more.h  platform_macros.h  ref_counted_pool.h  serialization.h  symbol_version.cpp  task.h  trait.h  types.h  version.h.in  virtual_dir.cpp  virtual_dir.h  zip.cpp  zip.h
gstaichi/compilation_manager/: CMakeLists.txt  (+2 more)
gstaichi/inc/: archs.inc.h  (+5 more)
gstaichi/rhi/metal/: CMakeLists.txt  metal_api.cpp  metal_api.h  metal_device.h  metal_device.mm
gstaichi/runtime/cuda/: CMakeLists.txt  jit_cuda.cpp  jit_cuda.h  kernel_launcher.cpp  kernel_launcher.h  ptx_cache.cpp  ptx_cache.h
misc/: benchmark_bit_struct_stores.py  benchmark_bls.py  benchmark_compile.py  benchmark_parallel_compilation.py  benchmark_reduction.py  benchmark_reduction_tmps.py  benchmark_scatter_bls.py  benchmark_tensor_access.py  ci_create_pr_card.py  ci_setup.py  copyright.py  count_tags.py  demo_constant_fold.py  demo_launch_overhead.py  demo_listgen.py  demo_oob_ub.py  demo_trackback.py  diffgstaichi_bibtex.txt  examples.md  fetch_active_contributors.py  format_server.py  generate_c_api.py  generate_c_api_docs.py  generate_ir_design_doc.py  generate_unity_language_binding.py  gstaichi_bibtex.txt  gstaichi_json.py  idle_hello.py  links.md  make_changelog.py  minimal_timed.py  prtags.json  quangstaichi_bibtex.txt  spMv_linear_solve.py  sparse_matrix.py  tag_to_project.json  test_async_weaken_access.py  test_gpu_async.py  test_grid_stride_loop.py  test_gui.py  (+5 more)
python/: .gitignore
scripts/: build-gstaichi-android.sh  build-taichi-android.sh
taichi/: _main.html
tests/: generate_compat_test_modules.py  run_c_api_compat_test.py  run_tests.py  test_utils.py
user_guide/: index.html
(+3399 files in other folders)
