[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy",
    "pybind11",
    "cmake",
    "scikit-build",
    "ninja; platform_system != 'Windows'",
    "setuptools>=68.0.0",
    "cffi>=1.16.0",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Calling non-taichi function",
    "ignore:`np.int` is a deprecated alias",
    "ignore:Operator \"is\" in Taichi scope is deprecated",
    "ignore:Operator \"is not\" in Taichi scope is deprecated"
]

[tool.yapf]
based_on_style = "pep8"
blank_line_before_nested_class_or_def = false

[tool.ruff]
exclude = [
    "external/**/*",
]

[tool.ruff.lint]
select = ["I"]  # Enable import ordering checks

[tool.ruff.lint.isort]
known-local-folder = ["taichi", "tests"]
known-third-party = ["pytest"]
