[project]
name = "gstaichi"
description = "The GsTaichi Programming Language"
maintainers = [{name = "GsTaichi developers"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Compilers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Games/Entertainment :: Simulation",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["graphics", "simulation"]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=1.26.0",
    "colorama",
    "dill",
    "pydantic>=2.0.0",  # rewrite of 1.10 from scratch
    "rich>=1.0.0",  # first non-beta version; 2020
    "setuptools>=77.0.0",  # Gives project.license-files
    "cffi>=1.16.0",
]

[tool.setuptools_scm]
write_to = "python/gstaichi/_version.py"
write_to_template = "__version__ = '{version}'\n"

[dependency-groups]
docs = [
    "sphinx",
    "sphinx-copybutton",
    "myst_parser",
    "sphinx-subfigure",
    "sphinxcontrib-video",
    "sphinx-togglebutton",
    "sphinx-design",
    "pydata-sphinx-theme",
    "sphinx-autoapi",
    "astroid<4.0.0",  # upgrade to 4.0.0 on oct 5 2025 broke the build
]
dev = [
    "cmake<4.0.0",
    "colorama",
    "coverage",
    "Pillow",
    # pybind11 should be less than 3.0.0 for now
    # pybind11 3.0.0 caused builds to start failing.
    # whilst we could probably get 3.0.0 working too, I feel that x.0.0 releases, in opensource (and closed source
    # too often) might not always be very stable, so we might want to wait 3-6 months before trying it?)
    "pybind11<3.0.0",
    "pybind11-stubgen",
    "pydantic",
    "GitPython",
    "yapf",
    "distro",
    "isort",
    "pylint",
    "pyright",
    "requests",
    "twine",
    "wheel",
    "astunparse",
    "pre-commit",
    "scikit-build",
    "setuptools_scm>=6.0",
    "numpy>=2.0.0",
    "ninja; platform_system != 'Windows'",
    "ruamel.yaml",
]
test = [
    # You also need to:
    # pip install -r requirements_test_xdist.txt
    "Pillow",
    "pytest",
    # 16.0 upgrade broke xfail, caused fatal errors, see
    # https://github.com/Genesis-Embodied-AI/gstaichi/pull/162
    "pytest-rerunfailures<16.0",
    "pytest-cov",
    "pytest-retry",
    "numpy>=2.0.0",  # otherwise, on windows, tries to install 1.26.4, which has no wheel for python 3.13
    "psutil",
    "autograd",
    "requests",
    "cffi",
    "scipy",
    "setproctitle",
    "nbmake",
    "marko",
    "PyYAML",
    "pyevtk",
    "pyright",
]

[project.urls]
Homepage = "https://github.com/Genesis-Embedded-AI/gstaichi"

[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel",
    "numpy>=2.0.0",
    "pybind11<3.0.0",
    "pybind11-stubgen",
    "cmake>=3.11",
    "scikit-build",
    "ninja; platform_system != 'Windows'",
    "psutil",
    "cffi>=1.16.0",
    "setuptools_scm>=6.0",
]
# This will be used when doing `pip install -e .`, for fast installation of python
# things, without doing full c++ build
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Calling non-taichi function",
    "ignore:`np.int` is a deprecated alias",
    "ignore:Operator \"is\" in Taichi scope is deprecated",
    "ignore:Operator \"is not\" in Taichi scope is deprecated"
]

[tool.yapf]
based_on_style = "pep8"
blank_line_before_nested_class_or_def = false

[tool.ruff]
exclude = [
    "external/**/*",
]

[tool.ruff.lint]
select = ["I", "F401"]  # Enable import ordering checks, and unused import checks

[tool.ruff.lint.isort]
known-local-folder = ["taichi", "tests", ".github"]
known-third-party = ["pytest"]
